force-app/main/default/objects/Attribution_Result__c/Attribution_Result__c.object-meta.xml
<CustomObject>
    <description>Attribution model results for analysis and comparison. Stores channel-level attribution weights and values calculated by different models.</description>
    <label>Attribution Result</label>
    <nameField>
        <displayFormat>AR-{00000000}</displayFormat>
        <label>Attribution Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attribution Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>