force-app/main/default/objects/Attribution_Result__c/fields/Attribution_Model__c.field-meta.xml
<CustomField>
    <fullName>Attribution_Model__c</fullName>
    <description>Attribution model used to calculate this result</description>
    <inlineHelpText>The specific attribution model algorithm used to generate this attribution weight.</inlineHelpText>
    <label>Attribution Model</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LastTouch</fullName>
                <label>Last Touch</label>
            </value>
            <value>
                <fullName>FirstTouch</fullName>
                <label>First Touch</label>
            </value>
            <value>
                <fullName>Linear</fullName>
                <default>true</default>
                <label>Linear</label>
            </value>
            <value>
                <fullName>TimeDecay</fullName>
                <label>Time Decay</label>
            </value>
            <value>
                <fullName>PositionBased</fullName>
                <label>Position Based</label>
            </value>
            <value>
                <fullName>MarkovChain</fullName>
                <label>Markov Chain</label>
            </value>
            <value>
                <fullName>ShapleyValue</fullName>
                <label>Shapley Value</label>
            </value>
            <value>
                <fullName>Ensemble</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>