force-app/main/default/objects/Attribution_Result__c/fields/Attribution_Value__c.field-meta.xml
<CustomField>
    <fullName>Attribution_Value__c</fullName>
    <description>Monetary value attributed to this channel (EUR)</description>
    <inlineHelpText>The conversion value attributed to this channel based on the attribution weight and total journey value.</inlineHelpText>
    <label>Attribution Value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>