force-app/main/default/objects/Attribution_Result__c/fields/Attribution_Weight__c.field-meta.xml
<CustomField>
    <fullName>Attribution_Weight__c</fullName>
    <description>Attribution credit assigned to this channel (0-1)</description>
    <inlineHelpText>The percentage of attribution credit assigned to this channel by the attribution model (0 = no credit, 1 = full credit).</inlineHelpText>
    <label>Attribution Weight</label>
    <precision>5</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Number</type>
</CustomField>