force-app/main/default/objects/Attribution_Result__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>Marketing channel being attributed in this result</description>
    <inlineHelpText>The specific marketing channel that this attribution calculation applies to.</inlineHelpText>
    <label>Channel</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Google_Ads</fullName>
                <label>Google Ads</label>
            </value>
            <value>
                <fullName>Facebook_Ads</fullName>
                <label>Facebook Ads</label>
            </value>
            <value>
                <fullName>Email_Marketing</fullName>
                <label>Email Marketing</label>
            </value>
            <value>
                <fullName>LinkedIn_Ads</fullName>
                <label>LinkedIn Ads</label>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Content_Website_SEO</fullName>
                <label>Content/Website/SEO</label>
            </value>
            <value>
                <fullName>App_Store</fullName>
                <label>App Store</label>
            </value>
            <value>
                <fullName>Organic_Social</fullName>
                <label>Organic Social</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>