force-app/main/default/objects/Attribution_Result__c/fields/Customer_Journey__c.field-meta.xml
<CustomField>
    <fullName>Customer_Journey__c</fullName>
    <description>Master-detail relationship to the customer journey this attribution result belongs to</description>
    <inlineHelpText>The customer journey for which this attribution calculation was performed.</inlineHelpText>
    <label>Customer Journey</label>
    <referenceTo>Customer_Journey__c</referenceTo>
    <relationshipLabel>Attribution Results</relationshipLabel>
    <relationshipName>Attribution_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>